Added EF Added support for dependency injection Added InfoModule class to store information related commands Added command handler to, uh, handle commands

--- a/RulesLawyer/App.config
+++ b/RulesLawyer/App.config
@@ -2,5 +2,6 @@
 <configuration>
   <appSettings>
     <add key="BotToken" value="ODMzMDE5NTU0NTM1MTc4MzIw.YHsP6g.2SCLZiZiiN3W80OjjIPvNfT7zgc" />
+    <add key="SqliteFileName" value="PF2Rules.db" />
   </appSettings>
 </configuration>
