Added action command, updated database and a few other odds and ends

--- a/RulesLawyer/App.config
+++ b/RulesLawyer/App.config
@@ -3,5 +3,6 @@
   <appSettings>
     <add key="BotToken" value="ODMzMDE5NTU0NTM1MTc4MzIw.YHsP6g.2SCLZiZiiN3W80OjjIPvNfT7zgc" />
     <add key="SqliteFileName" value="PF2Rules.db" />
+    <add key="WakeSymbol" value="." />
   </appSettings>
 </configuration>
