alphabetized output of generic commands stop database from copying on build fixed hyperlink

--- a/RulesLawyer/RulesLawyer.csproj
+++ b/RulesLawyer/RulesLawyer.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <None Update="PF2Rules.db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
