--- a/RulesLawyer/RulesLawyer.csproj
+++ b/RulesLawyer/RulesLawyer.csproj
@@ -18,9 +18,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Assets\areas.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="PF2Rules.db">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Assets\" />
   </ItemGroup>
 
 </Project>
