--- a/RulesLawyer/App.config
+++ b/RulesLawyer/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="BotToken" value="ODMzMDE5NTU0NTM1MTc4MzIw.YHsP6g.2SCLZiZiiN3W80OjjIPvNfT7zgc" />
+    <add key="BotToken" value="<insert bot token here>" />
     <add key="SqliteFileName" value="PF2Rules.db" />
     <add key="WakeSymbol" value="." />
   </appSettings>
